--- a/static/main.css
+++ b/static/main.css
@@ -32,3 +32,10 @@ html, body, #root {
 .counter {
   pointer-events: none;
 }
+.saveBtn {
+  position: absolute;
+  right: 4px;
+  border-radius: 50px;
+  padding: 10px;
+  margin-top: -12px;;
+}
